# BreakoutGame

./: CMakeLists.txt  README.md  小球挡板游戏chat.txt
include/: Ball.hpp  Base.hpp  Brick.hpp  Button.hpp  Game.hpp  GameObject.hpp  GameState.hpp  Menu.hpp  Paddle.hpp  ResourceManager.hpp  utils.hpp
src/: Ball.cpp  Brick.cpp  Button.cpp  Game.cpp  GameObject.cpp  GameState.cpp  Menu.cpp  Paddle.cpp  ResourceManager.cpp  main.cpp  utils.cpp
